Add Up, Down and center

--- a/templates/spaceinvaders.html
+++ b/templates/spaceinvaders.html
@@ -117,7 +117,18 @@
                     <span id="probabilityMonitor"></span>
                 </div><!-- ./panel-cell -->
 
-                <div class="panel-cell panel-cell-center">
+                <div class="panel-cell panel-cell-center panel-cell-fill">
+                    <div class="thumb-box">
+                        <div class="thumb-box-outer">
+                            <div class="thumb-box-inner">
+                                <canvas class="thumb" width=224 height=224 id="up-thumb"></canvas>
+                            </div>
+                            <button class="record-button" id="up" value="8"><span>Add Sample</span></button>
+                        </div>
+                        <p>
+                            <span id="up-total" class="total">0</span> examples
+                        </p>
+                    </div>
                 </div><!-- ./panel-cell -->
 
                 <div class="panel-cell panel-cell-right panel-cell-fill">
@@ -140,8 +151,18 @@
                     </div>
                 </div><!-- ./panel-cell -->
 
-                <div class="panel-cell panel-cell-center panel-cell-fill">
-                    <img height="108" width="129" src="../static/spaceinvaders/images/joystick.png"/>
+                <div class="panel-cell panel-cell-center">
+                    <div class="thumb-box">
+                        <div class="thumb-box-outer">
+                            <div class="thumb-box-inner">
+                                <canvas class="thumb" width=224 height=224 id="center-thumb"></canvas>
+                            </div>
+                            <button class="record-button" id="center" value="5"><span>Add Sample</span></button>
+                        </div>
+                        <p>
+                            <span id="center-total" class="total">0</span> examples
+                        </p>
+                    </div>
                 </div><!-- ./panel-cell -->
 
                 <div class="panel-cell panel-cell-right">
@@ -165,7 +186,18 @@
                 <div class="panel-cell panel-cell-left panel-cell-fill">
                 </div><!-- ./panel-cell -->
 
-                <div class="panel-cell panel-cell-center">
+                <div class="panel-cell panel-cell-center panel-cell-fill">
+                    <div class="thumb-box">
+                        <div class="thumb-box-outer">
+                            <div class="thumb-box-inner">
+                                <canvas class="thumb" width=224 height=224 id="down-thumb"></canvas>
+                            </div>
+                            <button class="record-button" id="down" value="2"><span>Add Sample</span></button>
+                        </div>
+                        <p>
+                            <span id="down-total" class="total">0</span> examples
+                        </p>
+                    </div>
                 </div><!-- ./panel-cell -->
 
                 <div class="panel-cell panel-cell-right panel-cell-fill">
